--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar">
             <div class="menu">
                 <h3 class="logo">
-                    Company<span>name</span>
+                    Atex<span>Group</span>
                 </h3>
                 <div class="burger">
                     <div class="bar"></div>
