feat: add menu-list

--- a/index.html
+++ b/index.html
@@ -40,6 +40,35 @@
         </div>
     </div>
 
+
+    <div class="links">
+        <ul>
+            <li>
+                <a class="link" href="">Home</a>
+            </li>
+
+            <li>
+                <a class="link" href="">Servisec</a>
+            </li>
+
+            <li>
+                <a class="link" href="">Portfolio</a>
+            </li>
+
+            <li>
+                <a class="link" href="">Reviews</a>
+            </li>
+
+            <li>
+                <a class="link" href="">About</a>
+            </li>
+
+            <li>
+                <a class="link" href="">Contact</a>
+            </li>
+        </ul>
+    </div>
+
     <script src="./js/main.js"></script>
 </body>
 </html>
