feat: add animation to menu-list

--- a/index.html
+++ b/index.html
@@ -44,27 +44,27 @@
     <div class="links">
         <ul>
             <li>
-                <a class="link" href="">Home</a>
+                <a class="link" href="#" style="--i: .1s">Home</a>
             </li>
 
             <li>
-                <a class="link" href="">Servisec</a>
+                <a class="link" href="#" style="--i: .15s">Servisec</a>
             </li>
 
             <li>
-                <a class="link" href="">Portfolio</a>
+                <a class="link" href="#" style="--i: .2s">Portfolio</a>
             </li>
 
             <li>
-                <a class="link" href="">Reviews</a>
+                <a class="link" href="#" style="--i: .25s">Reviews</a>
             </li>
 
             <li>
-                <a class="link" href="">About</a>
+                <a class="link" href="#" style="--i: .3s">About</a>
             </li>
 
             <li>
-                <a class="link" href="">Contact</a>
+                <a class="link" href="#" style="--i: .35s">Contact</a>
             </li>
         </ul>
     </div>
