feat: add name every pages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
 
         
-        <div class="screen" id="">
+        <div class="screen" id="Home">
             <div class="main">
                 <header class="header__one">
                     <div class="header">
@@ -38,12 +38,12 @@
             <div class="shadow two"></div>
         </div>
 
-        <div class="screen" id="">
+        <div class="screen" id="Servises">
             <div class="main">
                 <header class="header__two">
                     <div class="header">
                         <div class="header__item">
-                            <h2 class="title">Home page</h2>
+                            <h2 class="title">Servises page</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae reprehenderit quisquam voluptas expedita necessitatibus tempore quo commodi totam officia sapiente hic dolor aperiam, exercitationem illo consequatur inventore temporibus atque maiores.</p>
                             <button class="btn">Read more</button>
                         </div>
@@ -54,12 +54,12 @@
             <div class="shadow two"></div>
         </div>
 
-        <div class="screen" id="">
+        <div class="screen" id="Portfolio">
             <div class="main">
                 <header class="header__three">
                     <div class="header">
                         <div class="header__item">
-                            <h2 class="title">Home page</h2>
+                            <h2 class="title">Portfolio page</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae reprehenderit quisquam voluptas expedita necessitatibus tempore quo commodi totam officia sapiente hic dolor aperiam, exercitationem illo consequatur inventore temporibus atque maiores.</p>
                             <button class="btn">Read more</button>
                         </div>
@@ -70,12 +70,12 @@
             <div class="shadow two"></div>
         </div>
 
-        <div class="screen" id="">
+        <div class="screen" id="Reviews">
             <div class="main">
                 <header class="header__four">
                     <div class="header">
                         <div class="header__item">
-                            <h2 class="title">Home page</h2>
+                            <h2 class="title">Reviews page</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae reprehenderit quisquam voluptas expedita necessitatibus tempore quo commodi totam officia sapiente hic dolor aperiam, exercitationem illo consequatur inventore temporibus atque maiores.</p>
                             <button class="btn">Read more</button>
                         </div>
@@ -86,12 +86,12 @@
             <div class="shadow two"></div>
         </div>
 
-        <div class="screen" id="">
+        <div class="screen" id="About">
             <div class="main">
                 <header class="header__one">
                     <div class="header">
                         <div class="header__item">
-                            <h2 class="title">Home page</h2>
+                            <h2 class="title">About page</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae reprehenderit quisquam voluptas expedita necessitatibus tempore quo commodi totam officia sapiente hic dolor aperiam, exercitationem illo consequatur inventore temporibus atque maiores.</p>
                             <button class="btn">Read more</button>
                         </div>
@@ -102,12 +102,12 @@
             <div class="shadow two"></div>
         </div>
 
-        <div class="screen" id="">
+        <div class="screen" id="Contact">
             <div class="main">
                 <header class="header__six">
                     <div class="header">
                         <div class="header__item">
-                            <h2 class="title">Home page</h2>
+                            <h2 class="title">Contact page</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae reprehenderit quisquam voluptas expedita necessitatibus tempore quo commodi totam officia sapiente hic dolor aperiam, exercitationem illo consequatur inventore temporibus atque maiores.</p>
                             <button class="btn">Read more</button>
                         </div>
