--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
         <nav class="navbar">
             <div class="menu">
-                <h3 class="logo">
+                <div class="logo">
+                    <img class="logo__img" src="img/logo.svg" alt="logo">
+                </div>
+                <h3 class="title">
                     Atex<span>Group</span>
                 </h3>
                 <div class="burger">
