feat: change font-weight to span

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <div class="header__item">
                             <h2 class="title">Home page</h2>
                             <p>
-                                ATEX GROUP, LLC
+                                <span>ATEX GROUP, LLC</span>
                                 <br>ELECTRIC MOTOR REPAIR AND REWINDING.
                             </p>
                             <button class="btn">Read more</button>
